# numericalmethods

./: .coverage  .gitignore  README.md  integrate.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini  travis.yaml  utilmethods.py
src/: differentiate.py  exceptions.py  integrate.py  leastsq.py  ode.py  roots.py  to_latex.py
src/CharliePY.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/charliepy/: differentiate.py  integrate.py  leastsq.py  ode.py  roots.py  to_latex.py
src/numericalmethods/: differentiate.py  exceptions.py  integrate.py  interpolate.py  leastsq.py  ode.py  pde.py  roots.py  to_base.py  to_latex.py  utilmethods.py
tests/: ode.py  test_differentiate.py  test_integrate.py  test_ode.py  test_roots.py
