[metadata]
name = CharliePY
version = 0.0.1
author = Luis Grau Martin-Maldonado
author_email = l.grau@alumnos.uc3m.es
description = Packages to help, specially but not uniquelly, UC3M student in their assignments.  
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LuisGMM/CharliePY
project_urls =
    Bug Tracker = https://github.com/LuisGMM/CharliePY/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
    numpy
    numba
    python_requires = >=3.7

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest >= 6.0
    pytest-cov >= 2.0
    mypy >= 0.910
    flake8 >