[metadata]
name = CharliePY
version = 0.0.1
author = Luis Grau Martin-Maldonado
author_email = l.grau@alumnos.uc3m.es
description = Packages to help, specially but not uniquelly, UC3M student in their assignments.  
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LuisGMM/CharliePY
project_urls =
    Bug Tracker = https://github.com/LuisGMM/CharliePY/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = 
    charliepy
install_requires =
    numba >= 0.55.1
    numpy >= 1.21.5
    pandas >= 1.1.1
python_requires = >=3.7
package_dir =
    = src
zip_safe = no

[options.extras_require]
testing =
    pytest >= 6.0
    pytest-cov >= 2.0
    mypy >= 0.910
    flake8 >= 3.9
    tox >= 3.24
    scipy >= 1.6.0

[options.package_data]
charliepy = py.typed

[flake8]
max-line-length = 160